assets/css/application.scss
/* ... */
// Don't let fonts in display titles get too big
.display-title * {
    font-size: inherit !important;
}

.error-wrapper {
    font-size: 18px;

    p {
        margin-bottom: 30px;
    }
}

.error-mascot {
    margin-right: 30px;
    max-width: 100%;
    width: 300px;
}

.times-in-utc {
    margin-top: 15px;
}

.download-dropdown {
    bottom: 5px;

    .glyphicon-download-alt {
        top: 2px;
    }
}

.multi-select {
    height: auto;

    .checkbox {
        display: inline-block;
        float: left;
        margin-top: 3px;
        width: calc(100% / 3);
    }
}

.user-group-icon {
    height: 18px;
}

a.help-icon {
    font-size: 25px;
    position: relative;
    text-decoration: none;
    top: 5px;
}

.help-text {
    cursor: help;
    text-decoration: underline dotted;
}

.reverted-edit {
    background: #fcf8e3 !important;
}

.side-to-side table {
    display: inline-block;
    vertical-align: top;
}

.side-to-side {
    clear: both;
}

